{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "45776c3a-63c8-43aa-9954-b974a995ea88",
            "actions": [
                {
                    "name": "ShootStart",
                    "type": "Button",
                    "id": "254a48c1-fda8-4cd4-ad61-31dfc227a6c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "cae09bf0-f9b4-4a36-a960-d9787335ac5a",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2,ScaleVector2(x=0.6,y=0.6)",
                    "interactions": ""
                },
                {
                    "name": "Direction",
                    "type": "Button",
                    "id": "b4953920-8774-466c-b957-dc92faa0a77d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootEnd",
                    "type": "Button",
                    "id": "ba9a0008-d310-4daf-89ee-dff663c57090",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "d9861df0-ec4d-46ff-9af9-03a9520a2197",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FastForward",
                    "type": "Button",
                    "id": "c00a35ab-297c-4706-b45e-e28a24e1371b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f0ac1020-3263-4af7-b477-fe6d2355b7ca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KBM",
                    "action": "ShootStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bdad872-9832-4993-9b81-b15c37293312",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2,NormalizeVector2,ScaleVector2(x=0.8,y=0.8)",
                    "groups": "KBM",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "3f22b3c6-ecbc-40a6-92f7-851a147ad149",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9219b87c-5186-404f-aeab-43f05acc83d6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c44d3e5e-e93a-4894-8d20-e87c93ac2eea",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "f80e7d5d-d9ac-4de7-bd24-81b7f0187ac3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "73169ded-f885-448e-8740-4522ea9cd60e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8d55f6ca-1490-4e1c-ad3f-f1b7efb0f710",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b57bd28d-85fe-4fe8-a0be-8bf0bb2e6d44",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "KBM",
                    "action": "ShootEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "373af3be-d4ab-403c-9b21-f909030df05e",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eefc7692-d3b5-4a25-be80-7174de0f8fb9",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "FastForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "2e9c217b-44ea-401b-80de-b6e809d72735",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "d377e23e-1a34-4f66-ae2c-1b795c3689a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fa2bf35c-7cae-4b0f-afb8-0a2d467877ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a64f8d35-5592-44cc-b6ef-bd9a073d5302",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ea623fc-f532-4ff1-98d1-f239c302f608",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "755a49a0-fb40-435d-abfe-0e08cfbe4b55",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51b93cd4-181b-4b20-922d-c2fe3ffb99ec",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "cef4e1f3-15fd-4574-bcaa-ff76953a1757",
            "actions": [
                {
                    "name": "GoToHole",
                    "type": "Button",
                    "id": "ec40eabb-a7d1-4b98-8a3f-f4752bfcc95f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdcd1dd0-e36d-4297-862e-d413693b3810",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToHole",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}